Add a note on running the lab notebook to the Query lab

--- a/labs/query_enriched_event_data_with_spark/query_enriched_event_data_with_spark.ipynb
+++ b/labs/query_enriched_event_data_with_spark/query_enriched_event_data_with_spark.ipynb
@@ -22,6 +22,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## How to run this notebook\n",
+    "\n",
+    "This lab lives in the [Optimizely Labs](https://github.com/optimizely/labs) repository.  Each lab contains a `README.md` file with instructions for running notebooks and any other executable code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Creating a Spark Session"
    ]
   },
