Fix: correct capitalization and remove confusing debug output

--- a/labs/query-enriched-event-data-with-spark/query_enriched_event_data_with_spark.ipynb
+++ b/labs/query-enriched-event-data-with-spark/query_enriched_event_data_with_spark.ipynb
@@ -46,7 +46,7 @@
     "    .builder \\\n",
     "    .appName(\"Python Spark SQL\") \\\n",
     "    .config(\"spark.sql.repl.eagerEval.enabled\", True) \\\n",
-    "    .config(\"spark.sql.repl.eagerEval.truncate\", 120) \\\n",
+    "    .config(\"spark.sql.repl.eagerEval.truncate\", 100) \\\n",
     "    .getOrCreate()"
    ]
   },
@@ -54,9 +54,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading enriched event data\n",
+    "## Loading Enriched Event data\n",
     "\n",
-    "The `OPTIMIZELY_DATA_DIR` environment variable may be used to specify the local directory where Enriched Event Data is stored.  If, for example, you've downloaded Enriched Event data and saved it in `optimizely_data` in your home directory, you can load that data in this notebook by executing the following command before launching Jupyter Lab:\n",
+    "The `OPTIMIZELY_DATA_DIR` environment variable may be used to specify the local directory where Enriched Event data is stored.  If, for example, you've downloaded Enriched Event data and saved it in `optimizely_data` in your home directory, you can load that data in this notebook by executing the following command before launching Jupyter Lab:\n",
     "\n",
     "```\n",
     "$ export OPTIMIZELY_DATA_DIR=~/optimizely_data\n",
@@ -77,7 +77,6 @@
     "\n",
     "def read_data(path, view_name):\n",
     "    \"\"\"Read parquet data from the supplied path and create a corresponding temporary view with Spark.\"\"\"\n",
-    "    print(f\"Reading {view_name} data from {path}\")\n",
     "    spark.read.parquet(path).createOrReplaceTempView(view_name)"
    ]
   },
@@ -94,15 +93,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading decisions data from data/type=decisions\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "decisions_dir = os.path.join(base_data_dir, \"type=decisions\")\n",
     "read_data(decisions_dir, \"decisions\")"
@@ -119,15 +110,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading events data from data/type=events\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "events_dir = os.path.join(base_data_dir, \"type=events\")\n",
     "read_data(events_dir, \"events\")"
@@ -152,15 +135,15 @@
       "text/html": [
        "<table border='1'>\n",
        "<tr><th>uuid</th><th>timestamp</th><th>process_timestamp</th><th>visitor_id</th><th>session_id</th><th>account_id</th><th>campaign_id</th><th>experiment_id</th><th>variation_id</th><th>attributes</th><th>user_ip</th><th>user_agent</th><th>referer</th><th>is_holdback</th><th>revision</th><th>client_engine</th><th>client_version</th></tr>\n",
-       "<tr><td>F4F1EF48-6BC2-4153-A1DA-C29E39B772F9</td><td>2020-05-25 15:27:33.085</td><td>2020-05-25 15:29:21.197</td><td>visitor_1590445653085</td><td>-1235693267</td><td>596780373</td><td>18149940006</td><td>18156943409</td><td>18174970251</td><td>[[100,, browserId, ie], [300,, device, iphone], [600,, source_type, direct], [200,, campaign, frequent visitors], [, ...</td><td>75.111.77.0</td><td>Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/53...</td><td>https://app.optimizely.com/</td><td>false</td><td>null</td><td>ricky/fakedata.pwned</td><td>1.0.0</td></tr>\n",
+       "<tr><td>F4F1EF48-6BC2-4153-A1DA-C29E39B772F9</td><td>2020-05-25 15:27:33.085</td><td>2020-05-25 15:29:21.197</td><td>visitor_1590445653085</td><td>-1235693267</td><td>596780373</td><td>18149940006</td><td>18156943409</td><td>18174970251</td><td>[[100,, browserId, ie], [300,, device, iphone], [600,, source_type, direct], [200,, campaign, fre...</td><td>75.111.77.0</td><td>Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81....</td><td>https://app.optimizely.com/</td><td>false</td><td>null</td><td>ricky/fakedata.pwned</td><td>1.0.0</td></tr>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+-----------+-------------+------------+------------------------------------------------------------------------------------------------------------------------+-----------+------------------------------------------------------------------------------------------------------------------------+---------------------------+-----------+--------+--------------------+--------------+\n",
-       "|                                uuid|              timestamp|      process_timestamp|           visitor_id| session_id|account_id|campaign_id|experiment_id|variation_id|                                                                                                              attributes|    user_ip|                                                                                                              user_agent|                    referer|is_holdback|revision|       client_engine|client_version|\n",
-       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+-----------+-------------+------------+------------------------------------------------------------------------------------------------------------------------+-----------+------------------------------------------------------------------------------------------------------------------------+---------------------------+-----------+--------+--------------------+--------------+\n",
-       "|F4F1EF48-6BC2-4153-A1DA-C29E39B772F9|2020-05-25 15:27:33.085|2020-05-25 15:29:21.197|visitor_1590445653085|-1235693267| 596780373|18149940006|  18156943409| 18174970251|[[100,, browserId, ie], [300,, device, iphone], [600,, source_type, direct], [200,, campaign, frequent visitors], [, ...|75.111.77.0|Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/53...|https://app.optimizely.com/|      false|    null|ricky/fakedata.pwned|         1.0.0|\n",
-       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+-----------+-------------+------------+------------------------------------------------------------------------------------------------------------------------+-----------+------------------------------------------------------------------------------------------------------------------------+---------------------------+-----------+--------+--------------------+--------------+"
+       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+-----------+-------------+------------+----------------------------------------------------------------------------------------------------+-----------+----------------------------------------------------------------------------------------------------+---------------------------+-----------+--------+--------------------+--------------+\n",
+       "|                                uuid|              timestamp|      process_timestamp|           visitor_id| session_id|account_id|campaign_id|experiment_id|variation_id|                                                                                          attributes|    user_ip|                                                                                          user_agent|                    referer|is_holdback|revision|       client_engine|client_version|\n",
+       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+-----------+-------------+------------+----------------------------------------------------------------------------------------------------+-----------+----------------------------------------------------------------------------------------------------+---------------------------+-----------+--------+--------------------+--------------+\n",
+       "|F4F1EF48-6BC2-4153-A1DA-C29E39B772F9|2020-05-25 15:27:33.085|2020-05-25 15:29:21.197|visitor_1590445653085|-1235693267| 596780373|18149940006|  18156943409| 18174970251|[[100,, browserId, ie], [300,, device, iphone], [600,, source_type, direct], [200,, campaign, fre...|75.111.77.0|Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81....|https://app.optimizely.com/|      false|    null|ricky/fakedata.pwned|         1.0.0|\n",
+       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+-----------+-------------+------------+----------------------------------------------------------------------------------------------------+-----------+----------------------------------------------------------------------------------------------------+---------------------------+-----------+--------+--------------------+--------------+"
       ]
      },
      "execution_count": 5,
@@ -194,15 +177,15 @@
       "text/html": [
        "<table border='1'>\n",
        "<tr><th>uuid</th><th>timestamp</th><th>process_timestamp</th><th>visitor_id</th><th>session_id</th><th>account_id</th><th>experiments</th><th>entity_id</th><th>attributes</th><th>user_ip</th><th>user_agent</th><th>referer</th><th>event_type</th><th>event_name</th><th>revenue</th><th>value</th><th>quantity</th><th>tags</th><th>revision</th><th>client_engine</th><th>client_version</th></tr>\n",
-       "<tr><td>235ABEC8-C9A1-4484-94AF-FB107524BFF8</td><td>2020-05-24 17:34:27.448</td><td>2020-05-24 17:41:59.059</td><td>visitor_1590366867448</td><td>-1274245065</td><td>596780373</td><td>[[18128690585, 18142600572, 18130191769, false]]</td><td>15776040040</td><td>[[100,, browserId, ff], [300,, device, ipad], [600,, source_type, campaign], [200,, campaign, frequent visitors], [, ...</td><td>174.222.139.0</td><td>Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/53...</td><td>https://app.optimizely.com/</td><td>null</td><td>add_to_cart</td><td>1000</td><td>1000.00001</td><td>null</td><td>[]</td><td>null</td><td>ricky/fakedata.pwned</td><td>1.0.0</td></tr>\n",
+       "<tr><td>235ABEC8-C9A1-4484-94AF-FB107524BFF8</td><td>2020-05-24 17:34:27.448</td><td>2020-05-24 17:41:59.059</td><td>visitor_1590366867448</td><td>-1274245065</td><td>596780373</td><td>[[18128690585, 18142600572, 18130191769, false]]</td><td>15776040040</td><td>[[100,, browserId, ff], [300,, device, ipad], [600,, source_type, campaign], [200,, campaign, fre...</td><td>174.222.139.0</td><td>Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81....</td><td>https://app.optimizely.com/</td><td>null</td><td>add_to_cart</td><td>1000</td><td>1000.00001</td><td>null</td><td>[]</td><td>null</td><td>ricky/fakedata.pwned</td><td>1.0.0</td></tr>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+------------------------------------------------+-----------+------------------------------------------------------------------------------------------------------------------------+-------------+------------------------------------------------------------------------------------------------------------------------+---------------------------+----------+-----------+-------+----------+--------+----+--------+--------------------+--------------+\n",
-       "|                                uuid|              timestamp|      process_timestamp|           visitor_id| session_id|account_id|                                     experiments|  entity_id|                                                                                                              attributes|      user_ip|                                                                                                              user_agent|                    referer|event_type| event_name|revenue|     value|quantity|tags|revision|       client_engine|client_version|\n",
-       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+------------------------------------------------+-----------+------------------------------------------------------------------------------------------------------------------------+-------------+------------------------------------------------------------------------------------------------------------------------+---------------------------+----------+-----------+-------+----------+--------+----+--------+--------------------+--------------+\n",
-       "|235ABEC8-C9A1-4484-94AF-FB107524BFF8|2020-05-24 17:34:27.448|2020-05-24 17:41:59.059|visitor_1590366867448|-1274245065| 596780373|[[18128690585, 18142600572, 18130191769, false]]|15776040040|[[100,, browserId, ff], [300,, device, ipad], [600,, source_type, campaign], [200,, campaign, frequent visitors], [, ...|174.222.139.0|Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/53...|https://app.optimizely.com/|      null|add_to_cart|   1000|1000.00001|    null|  []|    null|ricky/fakedata.pwned|         1.0.0|\n",
-       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+------------------------------------------------+-----------+------------------------------------------------------------------------------------------------------------------------+-------------+------------------------------------------------------------------------------------------------------------------------+---------------------------+----------+-----------+-------+----------+--------+----+--------+--------------------+--------------+"
+       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+------------------------------------------------+-----------+----------------------------------------------------------------------------------------------------+-------------+----------------------------------------------------------------------------------------------------+---------------------------+----------+-----------+-------+----------+--------+----+--------+--------------------+--------------+\n",
+       "|                                uuid|              timestamp|      process_timestamp|           visitor_id| session_id|account_id|                                     experiments|  entity_id|                                                                                          attributes|      user_ip|                                                                                          user_agent|                    referer|event_type| event_name|revenue|     value|quantity|tags|revision|       client_engine|client_version|\n",
+       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+------------------------------------------------+-----------+----------------------------------------------------------------------------------------------------+-------------+----------------------------------------------------------------------------------------------------+---------------------------+----------+-----------+-------+----------+--------+----+--------+--------------------+--------------+\n",
+       "|235ABEC8-C9A1-4484-94AF-FB107524BFF8|2020-05-24 17:34:27.448|2020-05-24 17:41:59.059|visitor_1590366867448|-1274245065| 596780373|[[18128690585, 18142600572, 18130191769, false]]|15776040040|[[100,, browserId, ff], [300,, device, ipad], [600,, source_type, campaign], [200,, campaign, fre...|174.222.139.0|Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81....|https://app.optimizely.com/|      null|add_to_cart|   1000|1000.00001|    null|  []|    null|ricky/fakedata.pwned|         1.0.0|\n",
+       "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+------------------------------------------------+-----------+----------------------------------------------------------------------------------------------------+-------------+----------------------------------------------------------------------------------------------------+---------------------------+----------+-----------+-------+----------+--------+----+--------+--------------------+--------------+"
       ]
      },
      "execution_count": 6,
@@ -423,20 +406,20 @@
       "text/html": [
        "<table border='1'>\n",
        "<tr><th>experiment_id</th><th>variation_id</th><th>event_name</th><th>Conversion count (Optimizely Web)</th></tr>\n",
-       "<tr><td>18142600572</td><td>18130191769</td><td>add_to_cart</td><td>2958</td></tr>\n",
-       "<tr><td>18142600572</td><td>18159011346</td><td>add_to_cart</td><td>2919</td></tr>\n",
-       "<tr><td>18156943409</td><td>18112613000</td><td>add_to_cart</td><td>2577</td></tr>\n",
        "<tr><td>18156943409</td><td>18174970251</td><td>add_to_cart</td><td>2655</td></tr>\n",
+       "<tr><td>18156943409</td><td>18112613000</td><td>add_to_cart</td><td>2577</td></tr>\n",
+       "<tr><td>18142600572</td><td>18159011346</td><td>add_to_cart</td><td>2919</td></tr>\n",
+       "<tr><td>18142600572</td><td>18130191769</td><td>add_to_cart</td><td>2958</td></tr>\n",
        "</table>\n"
       ],
       "text/plain": [
        "+-------------+------------+-----------+---------------------------------+\n",
        "|experiment_id|variation_id| event_name|Conversion count (Optimizely Web)|\n",
        "+-------------+------------+-----------+---------------------------------+\n",
-       "|  18142600572| 18130191769|add_to_cart|                             2958|\n",
-       "|  18142600572| 18159011346|add_to_cart|                             2919|\n",
-       "|  18156943409| 18112613000|add_to_cart|                             2577|\n",
        "|  18156943409| 18174970251|add_to_cart|                             2655|\n",
+       "|  18156943409| 18112613000|add_to_cart|                             2577|\n",
+       "|  18142600572| 18159011346|add_to_cart|                             2919|\n",
+       "|  18142600572| 18130191769|add_to_cart|                             2958|\n",
        "+-------------+------------+-----------+---------------------------------+"
       ]
      },
@@ -461,8 +444,8 @@
     "    GROUP BY\n",
     "        experiment_id, variation_id, event_name\n",
     "    ORDER BY\n",
-    "        experiment_id ASC,\n",
-    "        variation_id ASC,\n",
+    "        experiment_id DESC,\n",
+    "        variation_id DESC,\n",
     "        event_name ASC\n",
     "\"\"\")"
    ]
@@ -549,7 +532,7 @@
     "         variation_id,\n",
     "         event_name\n",
     "    ORDER BY\n",
-    "         experiment_id ASC,\n",
+    "         experiment_id DESC,\n",
     "         variation_id ASC\n",
     "\"\"\")"
    ]
