Link to the enriched event data getting started guide

--- a/labs/query-enriched-event-data-with-spark/query_enriched_event_data_with_spark.ipynb
+++ b/labs/query-enriched-event-data-with-spark/query_enriched_event_data_with_spark.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "## Loading Enriched Event data\n",
     "\n",
-    "The `OPTIMIZELY_DATA_DIR` environment variable may be used to specify the local directory where Enriched Event data is stored.  If, for example, you've downloaded Enriched Event data and saved it in `optimizely_data` in your home directory, you can load that data in this notebook by executing the following command before launching Jupyter Lab:\n",
+    "The `OPTIMIZELY_DATA_DIR` environment variable may be used to specify the local directory where Enriched Event data is stored.  If, for example, you've [downloaded Enriched Event data](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-getting-started) and saved it in `optimizely_data` in your home directory, you can load that data in this notebook by executing the following command before launching Jupyter Lab:\n",
     "\n",
     "```\n",
     "$ export OPTIMIZELY_DATA_DIR=~/optimizely_data\n",
@@ -73,7 +73,7 @@
    "source": [
     "import os\n",
     "\n",
-    "base_data_dir = os.environ.get(\"OPTIMIZELY_DATA_DIR\", \"data\")\n",
+    "base_data_dir = os.environ.get(\"OPTIMIZELY_DATA_DIR\", \"./data\")\n",
     "\n",
     "def read_data(path, view_name):\n",
     "    \"\"\"Read parquet data from the supplied path and create a corresponding temporary view with Spark.\"\"\"\n",
