Updated draft of experiment subjects lab

--- a/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
+++ b/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
@@ -33,7 +33,7 @@
     "# These parameters specify where this notebook should read and write data. The default location\n",
     "# is ./example_data in this notebook's directory.  You can point the notebook to another data\n",
     "# directory by setting the OPTIMIZELY_DATA_DIR environment variable.\n",
-    "base_data_dir = os.environ.get(\"OPTIMIZELY_DATA_DIR\", \"./data\")\n",
+    "base_data_dir = os.environ.get(\"OPTIMIZELY_DATA_DIR\", \"./example_data\")\n",
     "decisions_dir = os.path.join(base_data_dir, \"type=decisions\")\n",
     "subjects_output_dir = os.path.join(base_data_dir, \"type=subjects\")\n",
     "\n",
@@ -259,16 +259,16 @@
       "text/html": [
        "<table border='1'>\n",
        "<tr><th>experiment_id</th><th>variation_id</th><th>subject_count</th></tr>\n",
-       "<tr><td>18156943409</td><td>18174970251</td><td>4514</td></tr>\n",
        "<tr><td>18156943409</td><td>18112613000</td><td>4487</td></tr>\n",
+       "<tr><td>18156943409</td><td>18174970251</td><td>4514</td></tr>\n",
        "</table>\n"
       ],
       "text/plain": [
        "+-------------+------------+-------------+\n",
        "|experiment_id|variation_id|subject_count|\n",
        "+-------------+------------+-------------+\n",
-       "|  18156943409| 18174970251|         4514|\n",
        "|  18156943409| 18112613000|         4487|\n",
+       "|  18156943409| 18174970251|         4514|\n",
        "+-------------+------------+-------------+"
       ]
      },
@@ -286,6 +286,9 @@
     "    FROM \n",
     "        experiment_subjects \n",
     "    GROUP BY \n",
+    "        experiment_id,\n",
+    "        variation_id\n",
+    "    ORDER BY\n",
     "        experiment_id,\n",
     "        variation_id\n",
     "\"\"\")"
