Clean up README and add explanatory comments to lab notebook and run scripts

--- a/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
+++ b/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
@@ -6,9 +6,26 @@
    "source": [
     "# Computing Experiment Datasets #1: Experiment Subjects\n",
     "\n",
-    "In this Lab, we'll use [PySpark](https://spark.apache.org/docs/latest/api/python/index.html) to compute _experiment subjects_ from Optimizely Enriched Event \"Decision\" data.\n",
+    "This Lab is part of a multi-part series focused on computing useful experiment datasets. In this Lab, we'll use [PySpark](https://spark.apache.org/docs/latest/api/python/index.html) to compute _experiment subjects_ from [Optimizely Enriched Event](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-export) [\"Decision\"](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#decisions-2) data.\n",
     "\n",
-    "Experiment subjects are the individual units that are exposed to a control or treatment in the course of an online experiment.  In most online experiments, subjecsts are website visitor or app user. However, experiment treatments may also be applied to individual user sessions, service requests, search queries, etc."
+    "<!-- We use an external image URL rather than a relative path so that this notebook will be rendered correctly on the Optimizely Labs website -->\n",
+    "![Experiment subjects computation](https://raw.githubusercontent.com/optimizely/labs/master/labs/computing-experiment-subjects/img/subjects_computation.png)\n",
+    "\n",
+    "**Experiment subjects** are the individual units that are exposed to a control or treatment in the course of an online experiment.  In most online experiments, subjects are website visitors or app users. However, depending on your experiment design, treatments may also be applied to individual user sessions, service requests, search queries, etc. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to run this notebook\n",
+    "\n",
+    "This notebook lives in the [Optimizely Labs](http://github.com/optimizely/labs) repository.  You can download it and everything you need to run it by doing one of the following\n",
+    "1. Downloading a zipped copy of this Lab directory on the [Optimizely Labs page](https://www.optimizely.com/labs/computing-experiment-subjects/)\n",
+    "2. Downloading a [zipped copy of the Optimizely Labs repository](https://github.com/optimizely/labs/archive/master.zip) from Github\n",
+    "3. Cloning the [Github respository](http://github.com/optimizely/labs)\n",
+    "\n",
+    "Once you've downloaded this Lab directory (on its own, or as part of the [Optimizely Labs](http://github.com/optimizely/labs) repository, follow the instructions in the `README.md` file for this Lab."
    ]
   },
   {
