Change decisions_subject_id variable name

--- a/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
+++ b/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
@@ -64,7 +64,7 @@
     "#       Note that if you wish to group by a particular attribute, you'll need to add a step to \n",
     "#       transform your decision data such that this attribute is exposed in its own column\n",
     "#       https://docs.developers.optimizely.com/full-stack/docs/pass-in-audience-attributes-python\n",
-    "decision_subject_id = \"visitor_id\"\n",
+    "subject_id = \"visitor_id\"\n",
     "\n",
     "# Analysis window\n",
     "# The analysis window determines which decisions are included in your analysis.  The default\n",
@@ -213,7 +213,7 @@
     "spark.sql(f\"\"\"\n",
     "    CREATE OR REPLACE TEMPORARY VIEW experiment_subjects AS\n",
     "        SELECT\n",
-    "            {decision_subject_id},\n",
+    "            {subject_id},\n",
     "            experiment_id,\n",
     "            variation_id,\n",
     "            timestamp\n",
