Split parameters into different cells

--- a/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
+++ b/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
@@ -40,40 +40,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Local Data Storage\n",
+    "\n",
+    "These parameters specify where this notebook should read and write data. The default location is ./example_data in this notebook's directory. You can point the notebook to another data directory by setting the OPTIMIZELY_DATA_DIR environment variable prior to starting Jupyter Lab, e.g.\n",
+    "\n",
+    "```sh\n",
+    "export OPTIMIZELY_DATA_DIR=~/optimizely_data\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from datetime import datetime\n",
     "\n",
     "# Local data storage locations\n",
-    "# These parameters specify where this notebook should read and write data. The default location\n",
-    "# is ./example_data in this notebook's directory.  You can point the notebook to another data\n",
-    "# directory by setting the OPTIMIZELY_DATA_DIR environment variable.\n",
     "base_data_dir = os.environ.get(\"OPTIMIZELY_DATA_DIR\", \"./example_data\")\n",
     "decisions_dir = os.path.join(base_data_dir, \"type=decisions\")\n",
-    "subjects_output_dir = os.path.join(base_data_dir, \"type=subjects\")\n",
+    "subjects_output_dir = os.path.join(base_data_dir, \"type=subjects\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subject ID column\n",
+    "Used to group event-level records by experiment subject.  It's useful to modify this if you wish use another identifier to denote an individual subject, such as\n",
+    "1. \"session_id\" if you wish to compute session-level metrics with Optimizely data\n",
+    "2. A custom ID field, perhaps one found in an the user attributes attached to a decision.\n",
     "\n",
+    "Note that if you wish to group by a particular [user attribute](\n",
+    "https://docs.developers.optimizely.com/full-stack/docs/pass-in-audience-attributes-python), you'll need to add a step to \n",
+    "transform your decision data such that this attribute is exposed in its own column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Subject ID column\n",
-    "# Used to group event-level records by experiment subject.  It's useful to modify this if you wish\n",
-    "# use another identifier to denote an individual subject, such as\n",
-    "#    1. \"session_id\" if you wish to compute session-level metrics with Optimizely data\n",
-    "#    2. A custom ID field, perhaps one found in an the user attributes attached to a decision.\n",
-    "#       Note that if you wish to group by a particular attribute, you'll need to add a step to \n",
-    "#       transform your decision data such that this attribute is exposed in its own column\n",
-    "#       https://docs.developers.optimizely.com/full-stack/docs/pass-in-audience-attributes-python\n",
-    "subject_id = \"visitor_id\"\n",
+    "subject_id = \"visitor_id\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis window\n",
+    "The analysis window determines which decisions are included in your analysis.  The default window is this notebook is large enough that *all* decisions loaded will be included in the computation, but you can adjust this to focus on a specific time window.\n",
+    "\n",
+    "Note that Optimizely Web and Optimizely Full Stack use slightly different attribution logic to determine which subjects are counted in a particular time window.  The logic embedded in the queries in this notebook mimics the Full Stack approach.  More on this below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
     "\n",
     "# Analysis window\n",
-    "# The analysis window determines which decisions are included in your analysis.  The default\n",
-    "# window is this notebook is large enough that *all* decisions loaded will be included in \n",
-    "# the computation, but you can adjust this to focus on a specific time window.\n",
-    "#\n",
-    "# Note that Optimizely Web and Optimizely Full Stack use slightly different attribution logic\n",
-    "# to determine which subjects are counted in a particular time window.  The logic embedded in\n",
-    "# the queries in this notebook mimics the Full Stack approach.  More on this below.\n",
     "decisions_start = \"2000-01-01 00:00:00\"\n",
     "decisions_end = \"2099-12-31 23:59:59\"\n",
     "\n",
@@ -92,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +172,7 @@
        "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+-----------+-------------+------------+------------------------------------------------------------------------------------------------------------------------+-----------+------------------------------------------------------------------------------------------------------------------------+---------------------------+-----------+--------+--------------------+--------------+"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +239,7 @@
        "+---------------------+-------------+------------+-----------------------+"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +255,7 @@
     "        FROM (\n",
     "            SELECT\n",
     "                *,\n",
-    "                RANK() OVER (PARTITION BY experiment_id, {decision_subject_id} ORDER BY timestamp ASC) AS rnk\n",
+    "                RANK() OVER (PARTITION BY experiment_id, {subject_id} ORDER BY timestamp ASC) AS rnk\n",
     "            FROM\n",
     "                decisions\n",
     "        )\n",
@@ -243,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +326,7 @@
        "+-------------+------------+-------------+"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
