Change confusing ordered lists into unordered lists

--- a/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
+++ b/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
@@ -21,9 +21,9 @@
     "## How to run this notebook\n",
     "\n",
     "This notebook lives in the [Optimizely Labs](http://github.com/optimizely/labs) repository.  You can download it and everything you need to run it by doing one of the following\n",
-    "1. Downloading a zipped copy of this Lab directory on the [Optimizely Labs page](https://www.optimizely.com/labs/computing-experiment-subjects/)\n",
-    "2. Downloading a [zipped copy of the Optimizely Labs repository](https://github.com/optimizely/labs/archive/master.zip) from Github\n",
-    "3. Cloning the [Github respository](http://github.com/optimizely/labs)\n",
+    "- Downloading a zipped copy of this Lab directory on the [Optimizely Labs page](https://www.optimizely.com/labs/computing-experiment-subjects/)\n",
+    "- Downloading a [zipped copy of the Optimizely Labs repository](https://github.com/optimizely/labs/archive/master.zip) from Github\n",
+    "- Cloning the [Github respository](http://github.com/optimizely/labs)\n",
     "\n",
     "Once you've downloaded this Lab directory (on its own, or as part of the [Optimizely Labs](http://github.com/optimizely/labs) repository, follow the instructions in the `README.md` file for this Lab.\n",
     "\n",
@@ -72,8 +72,8 @@
    "source": [
     "### Subject ID column\n",
     "Used to group event-level records by experiment subject.  It's useful to modify this if you wish use another identifier to denote an individual subject, such as\n",
-    "1. \"session_id\" if you wish to compute session-level metrics with Optimizely data\n",
-    "2. A custom ID field, perhaps one found in an the user attributes attached to a decision.\n",
+    "- \"session_id\" if you wish to compute session-level metrics with Optimizely data\n",
+    "- A custom ID field, perhaps one found in an the user attributes attached to a decision.\n",
     "\n",
     "Note that if you wish to group by a particular [user attribute](\n",
     "https://docs.developers.optimizely.com/full-stack/docs/pass-in-audience-attributes-python), you'll need to add a step to \n",
